<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">95手机助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="recommend">推荐</string>
	<string name="game">游戏</string>
	<string name="software">软件</string>
	<string name="topic">专题</string>
	<string name="manager">管理</string>
	<string name="jingxuan">精选</string>
	<string name="fenlei">分类</string>
	<string name="pingce">评测</string>
	<string name="biwan">必玩</string>
	<string name="zhuanti">专题</string>
	<string name="down">下载</string>
	<string name="loading">努力加载中……</string>
	<string name="AppName">AppName</string>
	<string name="Intro">Intro</string>
	<string name="Size">Size</string>
	<string name="AppTitle">AppTitle</string>
	<string name="xiangqing">详情</string>
	<string name="Safe">安全</string>
	<string name="Free">免费</string>
	<string name="Noads">无广告</string>
	<string name="Times">次数</string>
	<string name="BangDan">榜单</string>
	<string name="APPINFO">★应用简介★</string>
</resources>
