<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/iv_softlvitem_applogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/tv_softlvitem_appname"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/iv_softlvitem_applogo"
            android:singleLine="true"
            android:text="@string/AppName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_softlvitem_appsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_softlvitem_appname"
            android:layout_below="@+id/tv_softlvitem_appname"
            android:text="@string/Size"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
             android:textColor="@color/black"
            android:id="@+id/tv_softlvitem_appintro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_softlvitem_appsize"
            android:layout_below="@+id/tv_softlvitem_appsize"
            android:text="@string/Intro" />

        <Button
            android:id="@+id/bt_softlvitem_appdown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/down"
            android:text="@string/down" />
    </RelativeLayout>

</RelativeLayout>