<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/iv_reclvitem_applogo"
            android:layout_width="60dp"
            android:layout_marginLeft="5dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon" />

        <Button
            android:id="@+id/bt_reclvitem_appdown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/bt_click_selector"
            android:text="@string/down" />

        <TextView
            android:id="@+id/tv_reclvitem_appintro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_reclvitem_applogo"
            android:layout_alignLeft="@+id/tv_reclvitem_appsize"
            android:text="@string/Intro"
            android:textColor="@color/graywhite" />

        <TextView
            android:id="@+id/tv_reclvitem_appsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_reclvitem_appname"
            android:layout_centerVertical="true"
            android:text="@string/Size"
            android:textColor="@color/graywhite"
            android:textAppearance="?android:attr/textAppearanceSmall"
           />

        <TextView
            android:id="@+id/tv_reclvitem_appname"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_reclvitem_appsize"
            android:layout_marginLeft="80dp"
            android:singleLine="true"
            android:text="@string/AppName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </RelativeLayout>

</RelativeLayout>